fixed horizontal scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -442,7 +442,6 @@ header::before {
 }
 
 .gallery--img {
-  width: 40rem;
 }
 
 .gallery--img img {
